--- a/128. Longest Consecutive Sequence.ipynb
+++ b/128. Longest Consecutive Sequence.ipynb
@@ -33,17 +33,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def longestConsecutive(self, nums: List[int]) -> int:\n",
+    "        nums = set(nums)\n",
+    "        if len(nums) == 0:\n",
+    "            return 0\n",
+    "        h = []\n",
+    "        for i in nums:\n",
+    "            heapq.heappush(h,i)\n",
+    "        ans = 1\n",
+    "        lcs = 1\n",
+    "        init = heapq.heappop(h)\n",
+    "        for i in range(len(nums)-1):\n",
+    "            temp = heapq.heappop(h)\n",
+    "            if init+1 == temp:\n",
+    "                init = temp\n",
+    "                lcs += 1\n",
+    "            else:\n",
+    "                ans = max(ans, lcs)\n",
+    "                lcs = 1\n",
+    "                init = temp\n",
+    "        return max(ans,lcs)"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c36892433cb4678e8e18e102d61482daaf1eaa7c72471b8a896202a24f4706d1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
